kubernetes/apps/downloads/sabnzbd/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "apps-to-sabnzbd"
spec:
  endpointSelector:
    matchLabels:
      egress.policy.home.arpa/sabnzbd: allow
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sabnzbd
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: In
              values: [downloads]
      toPorts:
        - ports:
            - port: "80"
